--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,3 +6,64 @@
     font-weight: 400;
     font-style: normal;
   }
+  /***shared styles**/
+  .flex-row {
+    display: flex;
+  }
+  .flex-column {
+    display: flex;
+  }
+  .dark2 {
+    color: #424242;
+  }
+  .dark3 {
+    color: #727272;
+  }
+  .bg-p{
+    background-color: rgba(255, 144, 14, 0.1);
+  }
+  .btn-primary {
+    background-color: #FF900E;
+    color: white;
+    font-weight: 600;
+    font-size: 1.25rem;
+    padding: 20px 25px;
+    border-radius: 8px;
+    border: none;
+  }
+  /***header styles**/
+
+  /***navbar styles***/
+  .navbar{
+    justify-content: space-between;
+    align-items: center;
+  }
+  .brand {
+    font-weight: 700;
+    font-size: 2.8rem;
+  }
+  .nav-item {
+    list-style: none;
+    margin-right: 30px;
+  }
+  .nav-link {
+    text-decoration: none;
+    font-weight: 400;
+  }
+  .navbar, .banner {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+  .banner-content {
+    max-width: 868px;
+    margin: 0   auto;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+  .banner-title {
+    font-weight: 700;
+    font-size: 4rem;
+  }
+  .banner-image {
+    width: 100%;
+  }
