responsive version redmi 14c approach has been commited

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,3 +67,10 @@
   .banner-image {
     width: 100%;
   }
+  /****header responsive mobile approach***/
+  @media screen and (max-width:757px) {
+    .navbar, .nav-links{
+        flex-direction: column;
+    }
+    
+  }
