--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,11 +13,17 @@
   .flex-column {
     display: flex;
   }
+  .dark1 {
+    color: #131313;
+  }
   .dark2 {
     color: #424242;
   }
   .dark3 {
     color: #727272;
+  }
+  .orange {
+    color: #FF900E;
   }
   .bg-p{
     background-color: rgba(255, 144, 14, 0.1);
@@ -30,6 +36,17 @@
     padding: 20px 25px;
     border-radius: 8px;
     border: none;
+  }
+  main {
+    max-width: 1365px;
+    margin: 0   auto;
+  }
+  main> section {
+    margin-top: 130px;
+  }
+  .section-title {
+    font-weight: 700;
+    font-size: 4rem;
   }
   /***header styles**/
 
@@ -60,17 +77,70 @@
     text-align: center;
     margin-bottom: 50px;
   }
-  .banner-title {
-    font-weight: 700;
-    font-size: 4rem;
-  }
+  
   .banner-image {
     width: 100%;
   }
-  /****header responsive mobile approach***/
-  @media screen and (max-width:757px) {
-    .navbar, .nav-links{
+
+
+  /*****features related styles***/
+  .team {
+    align-items: center;
+  }
+  .team-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+  }
+  .our-features {
+    margin-left: 4.56rem;
+    max-width: 537px;
+  }
+  .feature-title {
+    font-size: 2.8rem;
+    font-weight: 500;
+  }
+  #quick {
+    color: #727272;
+    font-size: 2.8rem;
+    font-weight: 500;
+  }
+  #of {
+    color: #131313;
+    font-size: 2.8rem;
+    font-weight: bold;
+  }
+  #Features {
+    color: #FF900E;
+    font-size: 2.8rem;
+    font-weight: bold;
+  }
+
+  /**** responsive mobile approach***/
+  @media screen and (max-width:576px) {
+    .navbar, 
+    .nav-links,
+    .team  {
         flex-direction: column;
     }
+    .team-img-container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .our-features {
+        margin-left: 1rem;
+        max-width: 537px;
+      }
     
   }
+   /**** responsive tab approach***/
+   @media screen and (min-width:576px) and (max-width:922px) {
+    .team  {
+        flex-direction: column;
+    }
+   
+    .our-features {
+        margin-left: 1rem;
+        margin-right: 1rem;
+        max-width: 700px;
+      }
+   }
